<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- garbagemap strings -->

	<string name="app_name">Artboards</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="book_now_string">ok</string>
	<string name="text_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
	<string name="date_string">17-09-2021</string>
	<string name="title_string">Mallam Junction, Accra</string>
	<string name="hotel_details_ek3_string">Mallam Junction</string>
	<string name="our_garbage_string">Our Garbage</string>
	<string name="settings_string">Find By</string>
	<string name="settings_ek1_string">Accra</string>
	<string name="settings_ek2_string">Tadi</string>
	<string name="settings_ek3_string">Central</string>
	<string name="settings_ek4_string">Kumasi</string>
	<string name="mallam_junction__accra_string">Mallam Junction, Accra</string>
	<string name="_17_10_2021_string">17-10-2021</string>
	<string name="abetifi__eastern_string">Abetifi, Eastern</string>
	<string name="_12_10_2021_string">12-10-2021</string>
	<string name="lapaz__accra_string">Lapaz, Accra</string>
	<string name="_01_10_2021_string">01-10-2021</string>
	<string name="bookings_string">Image</string>
	<string name="bookings_ek1_string">Description</string>
	<string name="reviews_string">GPS</string>
	<string name="account_string">Name of Location</string>
	<string name="settings_ek5_string">Add Garbage </string>
	<string name="book_now_ek1_string">Submit</string>
	<string name="settings_ek7_string">Settings</string>
	<string name="invite___earn_string">Invite &amp; Earn</string>
	<string name="messages_ek1_string">Messages</string>
	<string name="transactions_string">Prizes</string>
	<string name="bookings_ek3_string">Postings</string>
	<string name="account_ek2_string">Account</string>
	<string name="hotel_manager_string">GH  Patriot</string>
	<string name="name_string">Joshua Agbeku</string>
	<string name="save_changes_string">Save Changes</string>
	<string name="text_ek1_string">City</string>
	<string name="city_string">Greater Accra, Ghana </string>
	<string name="text_ek2_string">Phone Number</string>
	<string name="number_string">0552499879</string>
	<string name="text_ek3_string">Email</string>
	<string name="email_ek1_string">joshua.agbeku@regent.edu.gh</string>
	<string name="text_ek4_string">Full Name</string>
	<string name="name_ek2_string">Joshua Agbeku</string>
	<string name="edit_profile_ek3_string">Edit Profile</string>
	<string name="amt_string">17-09-2021</string>
	<string name="title_ek1_string">Mallam Junction, Accra</string>
	<string name="amt_ek1_string">23-10-2021</string>
	<string name="title_ek2_string">Near Tudu, Accra</string>
	<string name="view_more_string">View More</string>
	<string name="beijing_string">Tamale</string>
	<string name="berlin_string">Eastern</string>
	<string name="mumbai_string">Central</string>
	<string name="paris_string">Taadi</string>
	<string name="london_string">Kumasi</string>
	<string name="new_york_string">Accra</string>
	<string name="sign_up_string">Find by</string>
	<string name="dashboard_string">Our Garbage</string>
	<string name="already_string">Already a Member? Sign In</string>
	<string name="sign_up_ek5_string">Sign Up</string>
	<string name="text_ek5_string">Password</string>
	<string name="text_ek6_string">Phone Number</string>
	<string name="text_ek7_string">Email</string>
	<string name="text_ek8_string">Full Name</string>
	<string name="sign_up_ek6_string">Sign Up</string>
	<string name="text_ek9_string">Help Improve the sanitation crisis</string>
	<string name="sign_in_ek1_string">Sign In</string>
	<string name="sign_up_ek8_string">Sign Up</string>
	<string name="garbagemap_string">GarbageMap</string>
	<string name="sign_up_ek9_string">Sign Up</string>
	<string name="forgot_string">Forgot Password?</string>
	<string name="sign_in_ek6_string">Sign In</string>
	<string name="text_ek10_string">Password</string>
	<string name="text_ek11_string">Email or Phone</string>
	<string name="sign_in_ek7_string">Sign In</string>
</resources>