<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		garbagemap
	 *	@date 		1637940474143
	 *	@title 		Artboards
	 *	@author 	Joshu and Nathaniel
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/sign_up" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >





			<RelativeLayout android:id="@+id/page_sign_up_ek2"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__sign_up_ek3"
					android:background="@drawable/_bg__sign_up_ek3_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="385dp"
					android:layout_height="926dp" />


				<RelativeLayout android:id="@+id/background_ek13"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_2"
						android:background="@drawable/rectangle_2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="428dp"
						android:layout_height="926dp" />

				</RelativeLayout>

				<TextView android:id="@+id/already"
					android:fontFamily="Arial"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/book_now_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="724dp"
					android:layout_width="283dp"
					android:layout_height="57dp"
					android:text="@string/already_string"
					 />


				<RelativeLayout android:id="@+id/sign_up_ek4"
					android:layout_marginTop="637dp"
					android:layout_marginStart="18dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/background_ek14"
						android:background="@drawable/background_ek14_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="350dp"
						android:layout_height="60dp" />

					<TextView android:id="@+id/sign_up_ek5"
						android:fontFamily="Arial"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="32sp"
						android:textColor="@color/book_now_color"
						android:layout_marginLeft="71dp"
						android:layout_marginTop="14dp"
						android:layout_width="218dp"
						android:layout_height="54dp"
						android:text="@string/sign_up_ek5_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/password"
					android:layout_marginTop="501dp"
					android:layout_marginStart="27dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/line_ek4"
						android:src="@drawable/line_ek4"
						android:contentDescription="line_ek4"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="71dp"
						android:layout_width="331dp"
						android:layout_height="2dp" />

					<TextView android:id="@+id/text_ek5"
						android:fontFamily="Arial"
						android:textSize="24sp"
						android:textColor="@color/book_now_color"
						android:layout_marginLeft="106dp"
						android:layout_marginTop="24dp"
						android:layout_width="148dp"
						android:layout_height="66dp"
						android:text="@string/text_ek5_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/phone_ek1"
					android:layout_marginTop="428dp"
					android:layout_marginStart="28dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/line_ek5"
						android:src="@drawable/line_ek5"
						android:contentDescription="line_ek5"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="71dp"
						android:layout_width="330dp"
						android:layout_height="2dp" />

					<TextView android:id="@+id/text_ek6"
						android:fontFamily="Arial"
						android:textSize="24sp"
						android:textColor="@color/book_now_color"
						android:layout_marginLeft="67dp"
						android:layout_marginTop="23dp"
						android:layout_width="224dp"
						android:layout_height="66dp"
						android:text="@string/text_ek6_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/email_ek2"
					android:layout_marginTop="352dp"
					android:layout_marginStart="28dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/line_ek6"
						android:src="@drawable/line_ek6"
						android:contentDescription="line_ek6"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="71dp"
						android:layout_width="330dp"
						android:layout_height="2dp" />

					<TextView android:id="@+id/text_ek7"
						android:fontFamily="Arial"
						android:textSize="24sp"
						android:textColor="@color/book_now_color"
						android:layout_marginLeft="130dp"
						android:layout_marginTop="22dp"
						android:layout_width="98dp"
						android:layout_height="66dp"
						android:text="@string/text_ek7_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/name_ek3"
					android:layout_marginTop="279dp"
					android:layout_marginStart="27dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/line_ek7"
						android:src="@drawable/line_ek7"
						android:contentDescription="line_ek7"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="71dp"
						android:layout_width="330dp"
						android:layout_height="2dp" />

					<TextView android:id="@+id/text_ek8"
						android:fontFamily="Arial"
						android:textSize="24sp"
						android:textColor="@color/book_now_color"
						android:layout_marginLeft="102dp"
						android:layout_marginTop="12dp"
						android:layout_width="155dp"
						android:layout_height="66dp"
						android:text="@string/text_ek8_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/sign_up_ek6"
					android:fontFamily="Arial"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="64sp"
					android:textColor="@color/book_now_color"
					android:layout_marginLeft="67dp"
					android:layout_marginTop="136dp"
					android:layout_width="265dp"
					android:layout_height="149dp"
					android:text="@string/sign_up_ek6_string"
					 />

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>